*** 0.2.7 ***

	* TODO
	* bin/cygport.in (src_fetch, src_prep, apply_patch, pkg_srcpkg):
	Implement PATCH_URI for upstream or third-party patches.
	(cygautoreconf): Fix where not using AC_CONFIG_HEADERS.

	* data/mirrors (mirror_portage): New mirror for gentoo-x86 CVS repo.
	(mirror_sourceforge): Prepend downloads.sourceforge.net.
	(mirror_vim): Added.

	* bin/cygport.in (__list_deps): 
	New algorithm for calculating deps.  More accurate and usually faster.

	* bin/cygport.in (fetch, src_fetch): Support HTTPS with invalid certs.

	* bin/cygport.in (cygautoreconf)
	* lib/gnome2.cygclass (gnome2_autoreconf):
	Assure that subdirs specified in AC_CONFIG_SUBDIRS grep actually exist.

	* lib/perl.cygclass (perl_postinst):
	Test for, and warn upon, use of site_perl instead of vendor_perl.
	
	* CYGWIN-PATCHES/README
	* bin/Makefile.am
	* bin/cygport.in (__prepetc)
	* bin/prep_gtk_icon_theme.sh:
	New postinstall step for calling gtk-update-icon-cache.

	* lib/qt3.cygclass: export QTDIR.

	* bin/cygport.in (verbose, cygconf, cygmake, cyginstall): Preserve
	shell metacharacters in args.  Patch by Eric Blake
	<http://cygwin.com/ml/cygwin/2006-12/msg00440.html>.

	* lib/ruby-gnome2.cygclass:
	Ruby-GNOME2 does not support parallel make.
	Fix modules which don't use a src subdir.
	Add support for modules outside of ruby-gnome2-all (e.g. gstreamer0.10).

	* lib/pygtk.cygclass:
	Add support for new bindings in gnome-python-desktop-2.16.

	* lib/fox.cygclass (fox_compile):
	Restore API reference doc generation.
	Accept doxygen.cfg as well as Doxyfile.

	* bin/*
	* lib/*:
	New function: defined(), behaves like the CPP macro.  Use throughout.
	Code cleanup.

	* CYGWIN-PATCHES/README
	* autogen.sh
	* configure.ac
	* doc/Makefile.am:
	Add HTML versions of man page with man2html.

	* data/mirrors (mirror_gnome):
	Remove download.gnome.org, as it just redirects to ftp.gnome.org.

	* Add CVS Id keywords.

	* lib/gstreamer.cygclass
	* lib/gst-plugins0.8.cygclass