@@ -9,4 +9,4 @@ cygport.1: $(top_builddir)/bin/cygport
 cygport.1.html: cygport.1
 	$(MAN2HTML) -r $< > $@
 
-MAINTAINERCLEANFILES = $(dist_man_MANS) $(dist_htmldoc_DATA)
+DISTCLEANFILES = $(dist_man_MANS) $(dist_htmldoc_DATA)
